[package]
name = "solman"
version = "0.0.1"
edition = "2018"

[[bin]]
name = "spinning-square"
path = "spinning/square.rs"

[[bin]]
name = "sol"
path = "src/main.rs"

[dependencies]
piston = "0.39.0"
piston2d-graphics = "0.28.0"
pistoncore-glutin_window = "0.51.0"
piston2d-opengl_graphics = "0.57.0"
rand = "*"
piston-texture = "0.6.0"
piston_window = "*"
